--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path: ^1.6.2
   esys_flutter_share: ^1.0.2
   flutter_svg: ^0.17.1
+  google_fonts: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
