--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 .history
 .svn/
 
+# FireBase Related
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+
 # IntelliJ related
 *.iml
 *.ipr
