--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tutorial_app
+name: creaid
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -23,8 +23,11 @@ dependencies:
   path_provider: ^1.1.0
   path: ^1.6.2
   esys_flutter_share: ^1.0.2
-  flutter_svg: ^0.17.1
   google_fonts: ^1.0.0
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
