--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,7 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_storage: ^3.1.5
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
