--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_storage: ^3.1.5
   cupertino_icons: ^0.1.2
+  intl: ^0.16.1
+  provider: ^3.1.0
 
 dev_dependencies:
   flutter_test:
