--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
