--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
+    "fluent-ffmpeg": "^2.1.2",
     "underscore": "^1.10.2"
   },
   "devDependencies": {
