--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,13 @@
     "node": "8"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "@google-cloud/storage": "^5.0.0",
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "fluent-ffmpeg": "^2.1.2",
+    "mkdirp-promise": "^5.0.1",
     "underscore": "^1.10.2"
   },
   "devDependencies": {
