--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@google-cloud/storage": "^5.0.0",
+    "algoliasearch": "^4.2.0",
     "child-process-promise": "^2.2.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
