--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: ^0.16.1
   provider: ^3.1.0
-  image_picker: ^0.6.6+1 
+  image_picker: ^0.6.6+1
+  flutter_launcher_icons: ^0.7.5
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/creaid_app_icon.png"
 
 dev_dependencies:
   flutter_test:
