--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
 
 flutter_icons:
+  image_path_android: "assets/icon/creaid_app_icon_android.png"
+  image_path_ios: "assets/icon/creaid_app_icon.png"
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/creaid_app_icon.png"
 
 dev_dependencies:
   flutter_test:
