--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: ^0.16.1
   provider: ^3.1.0
+  image_picker: ^0.6.6+1 
 
 dev_dependencies:
   flutter_test:
