updated the auth flow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
 
 flutter_icons:
-  image_path_android: "assets/icon/creaid_app_icon_android.png"
+  image_path_android: "assets/icon/creaid_icon.png"
   image_path_ios: "assets/icon/creaid_app_icon.png"
   android: "launcher_icon"
   ios: true
