--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.6.6+1
   algolia: ^0.1.6+1
   flutter_launcher_icons: ^0.7.5
+  image_cropper: ^1.2.3
 
 flutter_icons:
   image_path_android: "assets/icon/creaid_icon.png"
