--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   algolia: ^0.1.6+1
   flutter_launcher_icons: ^0.7.5
   image_cropper: ^1.2.3
+  sticky_headers: "^0.1.8"
 
 flutter_icons:
   image_path_android: "assets/icon/creaid_icon.png"
