--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
-    "@google-cloud/storage": "^5.0.0",
+    "@google-cloud/storage": "^5.1.1",
     "algoliasearch": "^4.2.0",
     "child-process-promise": "^2.2.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.2",
     "fluent-ffmpeg": "^2.1.2",
+    "mkdirp": "^1.0.4",
     "mkdirp-promise": "^5.0.1",
     "underscore": "^1.10.2"
   },
