added ffmpeg but still not activating it yet

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,10 @@ buildscript {
     }
 }
 
+ext {
+    flutterFFmpegPackage = "min-gpl-lts"
+}
+
 allprojects {
     repositories {
         google()
