ensure private files arent checked in again

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 # FireBase Related
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
+*/google-services.json
+*/GoogleService-Info.plist
 
 # IntelliJ related
 *.iml
