--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+ios/Flutter/.last_build_id
